triggers/eventlistener-ingress.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: el-gitea-webhook-ingress
spec:
  virtualhost:
    fqdn: will be replaced
  routes: []
