triggers/github-eventlistener.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webhook
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: github-webhook
spec:
  port:
    targetPort: 8080
  to:
    kind: 'Service'
    name: el-github-webhook
    weight: 100
